--- a/template/adminx/inter.html
+++ b/template/adminx/inter.html
@@ -4,7 +4,7 @@
   <div class="page-header page-header-light">
     <div class="page-header-content header-elements-md-inline">
       <div class="page-title d-flex">
-        <h4><span class="font-weight-semibold">Clients</span></h4>
+        <h4><span class="font-weight-semibold">International Transfer</span></h4>
       </div>
     </div>
   </div>
