--- a/template/mail/activate.html
+++ b/template/mail/activate.html
@@ -79,6 +79,7 @@
       <p>Hi {{user.username}},</p>
       <p>Thank you for signing up! To activate your account, please click the button below:</p>
       <a href="{{token}}" class="cta-button">Activate Your Account</a>
+      <b>Account Number: {{user2.Accountnum}}</b>
       <p>If you did not sign up for this account, you can safely ignore this email.</p>
     </div>
     <div class="footer">
