--- a/template/adminx/edituser.html
+++ b/template/adminx/edituser.html
@@ -5,8 +5,8 @@
 
 
 {% block content %}
-
-<div class="content-wrapper">
+<script src="https://unpkg.com/htmx.org@1.9.10"></script>
+<div class="content-wrapper" id="delete-statussd">
     <div class="page-header page-header-light">
         <div class="page-header-content header-elements-md-inline">
             <div class="page-title d-flex">
@@ -175,7 +175,7 @@
                                         <span class="input-group-prepend">
                                             <span style="color:white !important;" class="input-group-text">Time</span>
                                         </span>
-                                        <input style="color: white !important;" type="datetime-local" name="end_date" step="any" max-length="10" class="form-control">
+                                        <input style="background-color: white !important; " type="datetime-local" name="end_date" step="any" max-length="10" class="form-control">
                                         
                                     </div>
                                 </div>
@@ -211,7 +211,7 @@
                 </thead>
                 <tbody>
                                {% for i in item.alltoritem %}
-                               <tr role="row" class="even">
+                               <tr role="row" class="even" id="sadas{{xi.uuid}}">
                                 <td class="sorting_1">2.</td>
                                 <td>USD{{i.Amount}}</td>
                                 <td> You have requested a wire transfer of Amt:USD{{i.Amount}}, to Acct:USD{{i.accnum}}
@@ -223,8 +223,47 @@
                                                                             <span class="badge badge-danger">{{i.appoved}}</span>
                                                                     </td>  
                                 <td>{{i.date}}</td>
+                                <td></td>
+                                <td> <form action="" method="post">
+                                    {% csrf_token %}
+                                    {% if i.swiftcode %}
+                                    <input type="hidden" value="{{i.swiftcode}}" name="swiftcodexc" id="">
+                                    {{formstatinter}}
+                                    {% else %}
+                                    <input type="hidden" value="none" name="swiftcodexc" id="">
+                                    {{formstat}}
+                                    {% endif %}
+                                    <input type="hidden" value="{{i.uuid}}" name="uuids" id="">
+                                    <button type="submit">Update</button>
+                                     </form>
+                                    </td>
                                 
+                                    <td>
+                                    {% if i.swiftcode %}
+                                    <a 
+                                    
+                                    hx-get="/deleteinter/{{ i.uuid }}/" 
+                                    onclick="document.getElementById('sadas{{xi.uuid}}').style.display='none'"
+
+                                class="dropdown-item"
+                                ><i class="bi bi-trash  mr-2"></i>Delete </a
+                              >
+                                    {% else %}
+                                    <a 
+                                    
+                                    hx-get="/deletelocal/{{ i.uuid }}/" 
+                                    hx-target="#delete-statussd" 
+                                    hx-swap="innerHTML" 
+                                    hx-confirm="Are you sure you want to delete this item?" 
+                                    onclick="document.getElementById('sadas{{xi.uuid}}').style.display='none'"
+                                class="dropdown-item"
+                                ><i class="bi bi-trash  mr-2"></i>Delete </a
+                              >
+                                    {% endif %}
+
                                 
+                                     
+                                </td>
                                 <td> 
         
         <!---div class="text-right">
