--- a/template/user/base.html
+++ b/template/user/base.html
@@ -188,7 +188,7 @@ tr:nth-child(even){background-color: #f2f2f2}
           <div class="sidenav-header d-flex align-items-center">
             <center>
               <a class="navbar-brand">
-                <img src="{{site.logo.url}}" class="navbar-brand-img" alt="...">
+                <img src="{{site.logo}}" class="navbar-brand-img" alt="...">
               </a>
 
             </center>
