--- a/template/user/base.html
+++ b/template/user/base.html
@@ -1,10 +1,11 @@
 
 <!-- saved from url=(0053)/dashboard -->
-<html class="no-js" lang="en" style="height: 100%;">
+<html class="no-js" lang="en" style="width: 100vw; overflow-x: hidden;" >
     <div id="in-page-channel-node-id" data-channel-name="in_page_channel_ghLGld"></div><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       {% load humanize %}
 
-    
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       .front {
 transform: translateZ(0);
@@ -156,6 +157,7 @@ tr:nth-child(even){background-color: #f2f2f2}
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@.css1.4.1/font/bootstrap-icons.css" rel="stylesheet">
             <title>Dashboard |{{site.name}}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
             
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1">
@@ -178,8 +180,10 @@ tr:nth-child(even){background-color: #f2f2f2}
                  <link type="text/css" rel="stylesheet" charset="UTF-8" href="{% static 'user/m=el_main_css'%}">
 </head>
     <!-- header begin-->
-    <body class="g-sidenav-show g-sidenav-pinned" style="position: relative; min-height: 100%; top: 0px;">
+    <body class="g-sidenav-show g-sidenav-pinned" s>
         <!-- Sidenav -->
+      
+
       <nav style="color: #fff; text-shadow: 0 1px 1px rgba(0,0,0,0.3);
       box-shadow: 0 1px 10px 1px rgba(0,0,0,0.3); background-image: linear-gradient(to right, #111, red);" class="sidenav navbar navbar-vertical fixed-left navbar-expand-xs navbar-light bg-white" id="sidenav-main">
         <div class="scroll-wrapper scrollbar-inner" style="position: relative;">
@@ -230,11 +234,7 @@ tr:nth-child(even){background-color: #f2f2f2}
             <div class="collapse navbar-collapse" id="sidenav-collapse-main">
               <!-- Nav items -->
               <ul class="navbar-nav">
-               <center>
-              <h6 class="navbar-heading p-0 text-muted"
-               style="display: flex; width: 100%;text-align: start  ; justify-content: end; background-color: #04234a; font-size: large; color: white !important; padding: 7px;"
-               >Dashboard</h6>
-    </center>              
+                            
                 <li class="nav-item">
                   <a style="color:white !important;" class="nav-link text-default" href="/dashboard/{{user.uuid}}">
                     <i class="bi bi-house"></i>
@@ -338,7 +338,7 @@ tr:nth-child(even){background-color: #f2f2f2}
       </nav>
        <div class="main-content" id="panel">
         <!-- Topnav -->
-        <nav class="navbar navbar-top navbar-expand navbar-light bg-secondary border-bottom">
+        <nav style="background-color: #eb001b;" class="navbar navbar-top navbar-expand navbar-light bg-secondary border-bottom">
           <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <!-- Search form -->
@@ -455,7 +455,8 @@ tr:nth-child(even){background-color: #f2f2f2}
           </div>
         </nav>
     <!-- header end -->
-           
+    <iframe style="width: 100%; max-height: 130px; background-color: transparent !important; margin: 0; padding: 0;" src="https://fxpricing.com/fx-widget/ticker-tape-widget.php?id=1,2,3,5,14,20&d_mode=compact-name" frameborder="0"></iframe>
+
     {% block content %}{% endblock content %}
     
     
