--- a/template/user/home.html
+++ b/template/user/home.html
@@ -3,188 +3,268 @@
  {% load humanize %}
 
 {% block content %}
-  
-<div style="   width: 100%; display: flex; justify-content: end;align-items: end;flex-direction: column;gap: 5px; padding: 12px; ">
-    <span class="badge badge-pill " style="background-color: red; color: #fff;">Account Number : {{user.Accountnum}}</span>
-    <span class="badge badge-pill badge-primary">Account holder : {{request.user.username}}</span>
-      
-  </div>
-  
-   <br>
-           <div style="background-color:white" class="col-lg-12 mt-10 mt-lg-0  ">
-                <div class="row align-items-center">
-            <div class="col-6 col-lg-3 color-black ml-lg-auto" style="position: relative;">
-                <h1 style="font-size:18px;" class="d-inline-block mb-0 text-black "><small class="flex">Welcome Back<b style="font-weight: bold; text-transform: capitalize;">   {{request.user.username}}</b></small></h1><br><br>
 
-                <img style="background-color:#04234a;" src="https://img.freepik.com/premium-vector/default-avatar-profile-icon-social-media-user-image-gray-avatar-icon-blank-profile-silhouette-vector-illustration_561158-3383.jpg" align="center" height="100" width="120"><br><br>
-                    <h4 class="mb-0 text-black "> Account Balance</h4>
-                    <h4 class="mb-0 text-black" style="font-size: smaller; font-weight: lighter; font-size: x-large;">USD ${{user.balance}}</h4>
-                   <span style="color: black !important;"> </span> <span style="font-size:12px; color:green;" class="tx-success tx-bold"> 9th  January 2025 </span>
-                </div>
-                <div class="col-6 col-sm-3 ml-sm-auto">
-                    <h1 style="font-size:16px;" class="d-inline-block mb-0 text-black"><small><b>Account Logged From:</b></small></h1><br><br>
-                     <img alt="" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuhIZ69OMvTAdMTcfWSFwk9QsXUfHEqXOMRg&s" align="center" height="35" width="30"><br><p class="mb-0 text-black">This Computer IP</p>
-                   
-                    <h3 class="mb-0 text-black" id="ip"><span></span>102.90.101.72</h3>
-                    <script>
-                      async function getUserIP() {
-          try {
-              const response = await fetch('https://api.ipify.org?format=json');
-              const data = await response.json();
-              console.log('User IP Address:', data.ip);
-              document.getElementById('ip').innerHTML = data.ip;
-          } catch (error) {
-              console.error('Error fetching IP address:', error);
-              return null;
-          }
-      }
-      getUserIP()
-      // Example usage
-       
-      
-                  </script>
-                    <span class="tx-12"><span class="tx-danger tx-bold"></span> </span>
-                    </div>
-                    
-                    
-                    <div class="col-12 col-lg-6 color-white ml-lg-auto">
-                   
-        <div class="row align-items-center">
-                      <h2 style="color:red !important;" class="card-title font-weight-semibold">Last Transaction</h2>
-                 
-              
-         <div class="table-responsive">
-            
-                      <a style="color:white !important;" class="nav-link text-default" href="/statement/{{user.uuid}}"><span class="badge badge-info">View More</span></a><table class="table table-bordered">
-                          <thead>
-                              <tr>
-                                  
-                                  <th style="font-size:12px; color:red">TYPE</th>
-                                  <th style="color:red !important;">AMOUNT</th>
-                                  <th style="color:red !important;">STATUS</th>
-                                  <th style="color:red !important;">DATE/TIME</th>
-                              </tr>
-                          </thead>
-                          <tbody>
-                            {% if  combined_queryset %} 
-                            {% for item in combined_queryset %}
-                                                      <tr>
-                            
-                              <td>  {% if item.types == 'Debit' %}
-                                                <span class="badge badge-danger"> {{item.types}} </span>
-                                                {% else %}
-                                                <span class="badge badge-primary"> {{item.types}} </span>
-                                                {% endif %}
-                                             </td>
-                  <td style="color:orange !important;"> USD{{item.Amount |intcomma}}</td>
-                              <td>
-                                                <span class="badge badge-success">{{item.appoved}}</span>
-                                            </td>
-                              <td style="color:orange !important;">{{item.date}}<br></td>
-                          </tr>
-                          {% endfor %}
-                          {% endif %} 
-                                                   
-                          </tbody> 
-                            
-                      </table>
-                       
-                  </div>
-                  </div>
-                  </div> 
-                  
-                  
-                  
-                  
-            </div>
-            </div>
   
-  <div class="header pb-6 d-flex align-items-center" style="min-height: 500px; background-image: url('https://media.istockphoto.com/id/1176461451/photo/concentrated-businessman-is-working-on-laptop-computer.jpg?b=1&s=612x612&w=0&k=20&c=sZuamE1IRRcswvB6YjdRGZRHGcnYAOccLXXTX1Uu-f0='); background-size: cover; background-position: center top;">
-    <!-- Mask -->
-    <span class="mask bg-gradient-default opacity-3"></span>
-    <!-- Header container -->
-    <div class="container-fluid">
-      <div class="header-body">
-        <div class="row align-items-center py-4">
-          <div class="col-lg-6 col-10">
-            <!--h1 class="d-inline-block mb-0 text-white">Acct - #2926367196</h1--->
-            
-             <div class="col-lg-10 mt-10 col-12 mt-lg-0">
-          
-          
-           <div card="" begings="" style="width: 350px;margin-top:1px; border-radius: 15px; color: #fff;
-    text-shadow: 0 1px 1px rgba(0,0,0,0.3);
-    box-shadow: 0 1px 10px 1px rgba(0,0,0,0.3); background-image: linear-gradient(to right, #111, red); overflow: hidden;">
-            
-                <div class="col-12 col-lg-12 color-white ml-lg-auto">
-          
-        <div style=" width: 350px; height: inherit;">
-        <div style=" border-radius: 15px; color: #fff;
-    text-shadow: 0 1px 1px rgba(0,0,0,0.3);
-    box-shadow: 0 1px 10px 1px rgba(0,0,0,0.3); background-image: linear-gradient(to right, #111, #712d2d); overflow: hidden;">
-            
-          <div class="strip-bottom"></div>
-          <div class="strip-top"></div>
-          <svg class="logo" width="40" height="40" viewBox="0 0 17.5 16.2">
-            <path d="M3.2 0l5.4 5.6L14.3 0l3.2 3v9L13 16.2V7.8l-4.4 4.1L4.5 8v8.2L0 12V3l3.2-3z" fill="white"></path>
-          </svg>
-          <div class="investor">{{site.name}}</div>
-          <div class="chip">
-            <div class="chip-line"></div>
-            <div class="chip-line"></div>
-            <div class="chip-line"></div>
-            <div class="chip-line"></div>
-            <div class="chip-main"></div>
-          </div>
-          <svg class="wave" viewBox="0 3.71 26.959 38.787" width="26.959" height="38.787" fill="white">
-            <path d="M19.709 3.719c.266.043.5.187.656.406 4.125 5.207 6.594 11.781 6.594 18.938 0 7.156-2.469 13.73-6.594 18.937-.195.336-.57.531-.957.492a.9946.9946 0 0 1-.851-.66c-.129-.367-.035-.777.246-1.051 3.855-4.867 6.156-11.023 6.156-17.718 0-6.696-2.301-12.852-6.156-17.719-.262-.317-.301-.762-.102-1.121.204-.36.602-.559 1.008-.504z"></path>
-            <path d="M13.74 7.563c.231.039.442.164.594.343 3.508 4.059 5.625 9.371 5.625 15.157 0 5.785-2.113 11.097-5.625 15.156-.363.422-1 .472-1.422.109-.422-.363-.472-1-.109-1.422 3.211-3.711 5.156-8.551 5.156-13.843 0-5.293-1.949-10.133-5.156-13.844-.27-.309-.324-.75-.141-1.114.188-.367.578-.582.985-.542h.093z"></path>
-            <path d="M7.584 11.438c.227.031.438.144.594.312 2.953 2.863 4.781 6.875 4.781 11.313 0 4.433-1.828 8.449-4.781 11.312-.398.387-1.035.383-1.422-.016-.387-.398-.383-1.035.016-1.421 2.582-2.504 4.187-5.993 4.187-9.875 0-3.883-1.605-7.372-4.187-9.875-.321-.282-.426-.739-.266-1.133.164-.395.559-.641.984-.617h.094zM1.178 15.531c.121.02.238.063.344.125 2.633 1.414 4.437 4.215 4.437 7.407 0 3.195-1.797 5.996-4.437 7.406-.492.258-1.102.07-1.36-.422-.257-.492-.07-1.102.422-1.359 2.012-1.075 3.375-3.176 3.375-5.625 0-2.446-1.371-4.551-3.375-5.625-.441-.204-.676-.692-.551-1.165.122-.468.567-.785 1.051-.742h.094z"></path>
-          </svg>
-          <div class="cardd-number">
-            <div class="section">5349</div>
-            <div class="section">****</div>
-            <div class="section">****</div>
-            <div class="section">2069</div>
-          </div>
-          <div class="end"><span class="end-text">exp. end:</span><span class="end-date"> 03/26</span></div>
-          <div style="margin-left:25px; margin-bottom:12px" class="cardd-holder">{{user.username}}</div>
-          <div class="master">
-            <div class="circle master-red"></div>
-            <div class="circle master-yellow"></div>
-          </div>
-        </div>
-      </div>
+<section style="      width: 100%; display: flex; overflow: hidden; flex-direction: column; ">
+  
+
+   
+  <main class="sect1" style="gap: 12px; justify-content: space-around;"  >
+    <div class="card1"  >
+      <span style="align-items: start;">
+        <p >Account Type: <br>Account Number: </p>
+        <big style="font-weight: bolder; font-size: large; color: rgba(0, 0, 0, 0.594);"> Account Balance</big>
+        <pre style="color: gray; font-size: x-large;"> **** ***** ***** 3456</pre>
+        <strong>
+    
+          <small id="sddssksk">
+            <i class="bi bi-arrow-down "></i>
+            <aside><b style="color: rgba(140, 139, 139, 0.854);">USD {{user.income|intcomma}} </b> <p>Income </p></aside>
+          </small>
+          <small id="sddssksk" >
+            <i class="bi bi-arrow-up " style="background-color: #f09d2159; color: rgb(255, 145, 0);"></i>
+            <aside><b style="color: rgba(140, 139, 139, 0.854);">USD {{user.expense|intcomma}} </b> <p>expense </p>
+          </aside>
+          </small>
+        </strong>
+      </span>
+      <span style="align-items: end;">
+        <p>Current Account <br>{{user.Accountnum}}</p>
+
+       <b style="font-weight: bolder; font-size: 170%;">{{user.balance|intcomma}}.00 $</b>
+       <img style="width: 100px; height: 100px; border-radius: 50%; " src="https://srv.carbonads.net/static/30242/0fe0a4b4bb77d95b79e92231c69a7a73410223aa"  alt=""> 
+       <small style="width: fit-content; height: fit-content; padding: 12px; background-color: rgba(246, 43, 43, 0.909);border-radius: 22px; cursor: pointer; color: white; box-shadow: 1px 2px 2px rgba(215, 97, 97, 0.352);">
+          <a href="/local/{{user.uuid}}/">Transfer Money</a>
+        </small>
+      </span>
     </div>
-       </div> 
-         </div>
-            
-            
-          </div>
-          <div class="col-lg-6 col-12 text-right">
-            <div class="card  ">
-              {% include './wigit.html' %}
-              <div class="modal fade" id="modal-formx" tabindex="-1" role="dialog" aria-labelledby="modal-form" aria-hidden="true">
-                <div class="modal-dialog modal- modal-dialog-centered modal-sm" role="document">
-                  <div class="modal-content">
-                    <div class="modal-body p-0">
-                      <div class="card bg-gradient-default border-0 mb-0">
-                        <div class="card-body px-lg-5 py-lg-5">
-                          <div class="text-white text-left mt-2 mb-3">Don't let your money sit there, upgrade your account & start investing in PY(per year) scheme.</div> 
-                          <div class="text-white text-left mt-2 mb-3">Upgrade fee costs 200USD . Check PY scheme to see what your money is invested on.</div> 
-                            <div class="text-left">
-                            <a href="https://onlinebanking.zirantankasi.com/user/upgrade" class="btn btn-neutral">Upgrade</a>
-                            </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div> 
-               </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    
+    <div id="sdk" style="display: flex;flex-direction: column;position: relative;   align-items: end;justify-items: center; justify-content: center;"> 
+<div>
+<strong style="position: absolute; top: 112px; left: 90px; color: white; font-size: x-large;">
+  <b>USD 2000.00 </b> 
+  <p>Available Number</p>
+  <b>981209381209</b>
+</strong>
+  <img style="height: 320px; width: 100%; flex-grow: 1; " src="{% static 'card.png'%}" alt="">
+</div>
   </div>
+      </main>
+   
+      <style>
+        .sect1{
+          display: flex;
+         justify-content: center;
+          flex-wrap: wrap;
+          padding: 0;
+         align-items: center;
+          
+      } 
+    
+      #sdk img{
+object-fit:  cover;
+          }
+       @media screen and (max-width: 768px) {
+        #sddssksk{
+        font-size: x-small; 
+
+        & > *{
+          font-size: x-small;
+          & > *{
+            font-size: x-small;
+          }
+          }
+        }
+          .sect1{
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+          }
+          .card1{
+          background: #d4b5b516;
+      box-shadow: 2px 3px 2px rgba(140, 139, 139, 0.352);;
+          display: flex;
+              background-color: aliceblues;
+          border-radius: 12px;
+          width: 100vw;
+          overflow: hidden;
+          font-size: 70% !important;
+          padding: 12px ;
+          justify-content: space-evenly !important;
+          
+          & pre{
+font-size: small !important;
+          }
+          & small{
+font-size: medium !important;
+          }
+    & span{
+    display:flex;
+    flex-grow: 1;
+    padding: 2%;
+    width: fit-content;
+    flex-direction: column; 
+  justify-content: space-between !important;
+  font-size: 60%; 
+  gap: 12px;
+    & strong{
+display:flex; 
+gap: 12px;
+& >*{
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 12px;
+text-transform: capitalize;
+& i{
+width: fit-content;
+height: fit-content;
+font-size: x-small;
+
+color:white;
+padding: 8px;
+
+background-color: red;
+
+border-radius: 9px;
+}
+& i:last-child{
+  background-color: green;
+}
+& b{
+font-weight: bold;
+font-size: medium;
+}
+& > *{
+  display: flex ; 
+  flex-direction: column; 
+}
+}
+    }
+          }
+    
+         }
+
+      }
+          
+
+
+
+
+
+
+
+
+
+
+          @media screen and (min-width: 768px) {
+                
+      .card1{
+          background: #d4b5b516;
+      box-shadow: 2px 3px 2px rgba(140, 139, 139, 0.352);;
+          display: flex;
+          background-color: aliceblues;
+          border-radius: 12px;
+          padding: 12px ;
+          justify-content: space-between;
+    gap: 12px;
+    & span{
+    display:flex;
+    width: fit-content;
+    flex-direction: column; 
+  justify-content: space-between;
+  gap: 12px;
+    & strong{
+display:flex; 
+gap: 12px;
+& >*{
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 12px;
+text-transform: capitalize;
+& i{
+width: fit-content;
+height: fit-content;
+font-size: large;
+
+color:white;
+padding: 8px;
+
+background-color: red;
+
+border-radius: 9px;
+}
+& i:last-child{
+  background-color: green;
+}
+& b{
+font-weight: bold;
+font-size: larger;
+}
+& > *{
+  display: flex ; 
+  flex-direction: column; 
+}
+}
+    }
+          }
+    
+         }
+
+          }
+
+      
+
+         
+      </style>
+  <main style="padding: 3%;">
+<div >
+  <h1 style="color: black;">Transaction History</h1>
+
+
+    <div class="table-responsive">
+            
+      <a style="color:white !important;" class="nav-link text-default" href="/statement/{{user.uuid}}"><span class="badge badge-info">View More</span></a><table class="table table-bordered">
+          <thead>
+              <tr>
+                  
+                  <th style="font-size:12px; color:red">TYPE</th>
+                  <th style="color:red !important;">AMOUNT</th>
+                  <th style="color:red !important;">STATUS</th>
+                  <th style="color:red !important;">DATE/TIME</th>
+              </tr>
+          </thead>
+          <tbody>
+            {% if  combined_queryset %} 
+            {% for item in combined_queryset %}
+                                      <tr>
+            
+              <td>  {% if item.types == 'Debit' %}
+                                <span class="badge badge-danger"> {{item.types}} </span>
+                                {% else %}
+                                <span class="badge badge-primary"> {{item.types}} </span>
+                                {% endif %}
+                             </td>
+  <td style="color:orange !important;"> USD{{item.Amount |intcomma}}</td>
+              <td>
+                                <span class="badge badge-success">{{item.appoved}}</span>
+                            </td>
+              <td style="color:orange !important;">{{item.date}}<br></td>
+          </tr>
+          {% endfor %}
+          {% endif %} 
+                                   
+          </tbody> 
+            
+      </table>
+       
+  </div>
+</div>
+<div>
+</div>
+
+  </main>
+  </section>
+
 {% endblock %}
