--- a/template/user/base.html
+++ b/template/user/base.html
@@ -276,7 +276,7 @@ tr:nth-child(even){background-color: #f2f2f2}
                 
                  <li class="nav-item">
                   <a style="color:white !important;" href="/inter/{{user.uuid}}" class="nav-link">
-                    <i class="bi bi-archive-2"></i>
+                    <i class="bi bi-wallet"></i>
                     <span class="nav-link-text">Inter Bank Transfer</span>
                   </a>
                 </li>
@@ -306,28 +306,28 @@ tr:nth-child(even){background-color: #f2f2f2}
                 
                <li class="nav-item">
                 <a style="color:white !important;" href="/password/{{user.uuid}}" class="nav-link text-default">
-                        <i class="bi bi-key5"></i>
+                        <i class="bi bi-key"></i>
                         <span>Password</span>
                       </a>
                        </li>
                        
                  <li class="nav-item">
                       <a style="color:white !important;" href="/pin/{{user.uuid}}" class="nav-link text-default">
-                        <i class="bi bi-lock-circle-open"></i>
+                        <i class="bi bi-key"></i>
                         <span>Transfer pin</span>
                       </a>
                        </li>
                      
                      <li class="nav-item">
                   <a style="color:white !important;" class="nav-link text-default" href="/tiket/{{user.uuid}}">
-                    <i class="bi bi-earphone"></i>
+                    <i class="bi bi-phone"></i>
                     <span class="nav-link-text">Support ticket</span>
                   </a>
                 </li> 
                 
                 <li class="nav-item">
                   <a style="color:white !important;" class="nav-link text-default" href="/logout">
-                    <i class="bi bi-button-power"></i>
+                    <i class="bi bi-toggle-off"></i>
                     <span class="nav-link-text">Logout</span>
                   </a>
                 </li> 
