--- a/template/user/home.html
+++ b/template/user/home.html
@@ -29,7 +29,7 @@
         </strong>
       </span>
       <span style="align-items: end;">
-        <p>{{user.type_of_account}} Account <br>{{user.Accountnum}}</p>
+        <p style="text-transform: capitalize;">{{user.type_of_account | capital}} Account <br>{{user.Accountnum}}</p>
 
        <b style="font-weight: bolder; font-size: 170%;">{{user.balance|intcomma}}.00 $</b>
        <img style="width: 100px; height: 100px; border-radius: 50%; " src='{{ user.profile_picture|default:"https://srv.carbonads.net/static/30242/0fe0a4b4bb77d95b79e92231c69a7a73410223aa" }}'  alt=""> 
