--- a/template/mail/activate.html
+++ b/template/mail/activate.html
@@ -72,8 +72,8 @@
 <body>
   <div class="email-container">
     <div class="header">
-      <center><img src="{{site.host}}{{site.logo}}" style="width: 100px; height: 100px;border-radius: 50%;" alt=""></center>
-      <h1>Activate Your Account</h1>{{site.logo}}
+      <center><img src="{{site.logo}}" style="width: 100px; height: 100px;border-radius: 50%;" alt=""></center>
+      <h1>Activate Your Account</h1> 
     </div>
     <div class="content">
       <p>Hi {{user.username}},</p>
