--- a/template/mail/suspension.html
+++ b/template/mail/suspension.html
@@ -80,7 +80,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="{{site.host}}{{site.logo}}" alt="Your Logo">
+            <img src="{{site.logo}}" alt="Your Logo">
             <h1>Account Suspension Notice#</h1>
         </div>
         <div class="content">
