--- a/template/mail/inter.html
+++ b/template/mail/inter.html
@@ -24,7 +24,7 @@
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             }
             .header {
-                background-color: #007bff;
+                background-color: red;
                 color: #fff;
                 text-align: center;
                 padding: 20px;
@@ -39,7 +39,7 @@
             .content h2 {
                 font-size: 18px;
                 margin-bottom: 10px;
-                color: #007bff;
+                color: red;
             }
             .details {
                 background-color: #f9f9f9;
