--- a/template/auth/block.html
+++ b/template/auth/block.html
@@ -64,7 +64,7 @@
             padding: 12px 25px;
             font-size: 16px;
             color: #fff;
-            background-color: #007bff;
+            background-color: red;
             border-radius: 5px;
             text-decoration: none;
             margin-top: 20px;
@@ -82,7 +82,7 @@
         }
 
         .footer a {
-            color: #007bff;
+            color: red;
             text-decoration: none;
         }
 
