--- a/template/home/verified.html
+++ b/template/home/verified.html
@@ -69,7 +69,7 @@
   padding: 10px 20px;
   font-size: 16px;
   color: white;
-  background: #007BFF;
+  background: red;
   border: none;
   border-radius: 4px;
   text-decoration: none;
