--- a/template/mail/activate.html
+++ b/template/mail/activate.html
@@ -21,7 +21,7 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
     .header {
-      background-color: #007bff;
+      background-color: red;
       color: #ffffff;
       padding: 20px;
       text-align: center;
@@ -45,7 +45,7 @@
       margin: 0 auto;
       padding: 10px 20px;
       color: #ffffff;
-      background-color: #007bff;
+      background-color: red;
       text-decoration: none;
       border-radius: 4px;
       font-size: 16px;
@@ -64,7 +64,7 @@
       border-top: 1px solid #ddd;
     }
     .footer a {
-      color: #007bff;
+      color: red;
       text-decoration: none;
     }
   </style>
