--- a/template/mail/suspension.html
+++ b/template/mail/suspension.html
@@ -71,7 +71,7 @@
         }
 
         .footer a {
-            color: #007bff;
+            color: red;
             text-decoration: none;
         }
     </style>
