--- a/template/mail/trans.html
+++ b/template/mail/trans.html
@@ -26,7 +26,7 @@
         }
 
         .header {
-            background-color: #007bff;
+            background-color: red;
             color: #fff;
             text-align: center;
             padding: 20px;
@@ -44,7 +44,7 @@
         .content h2 {
             font-size: 18px;
             margin: 10px 0;
-            color: #007bff;
+            color: red;
         }
 
         .details {
