--- a/template/mail/activate.html
+++ b/template/mail/activate.html
@@ -72,7 +72,7 @@
 <body>
   <div class="email-container">
     <div class="header">
-      <center><img src="https://zirantankasi.vercel.app/static/imagesx/logo-en.png" style="width: 300px; height: 200px;border-radius: 50%;" alt=""></center>
+      <center><img src="https://zirantankasi.vercel.app/static/imagesx/logo-en.png" style="width: 300px; object-fit: contain; height: 200px;border-radius: 50%;" alt=""></center>
       <h1>Activate Your Account</h1> 
     </div>
     <div class="content">
