--- a/template/mail/activate.html
+++ b/template/mail/activate.html
@@ -22,7 +22,7 @@
     }
     .header {
       background-color: rgba(100, 97, 97, 0.416);
-      color: #ffffff;
+      color: #edc0c04a;
       padding: 20px;
       text-align: center;
     }
