--- a/template/mail/admintrans.html
+++ b/template/mail/admintrans.html
@@ -84,7 +84,7 @@
     <div class="email-container">
         <!-- Header Section -->
         <div class="header">
-            <h1>Chestburg Bank</h1>
+            <h1>{{site.name}}</h1>
         </div>
 
         <!-- Content Section -->
