--- a/template/home/verified.html
+++ b/template/home/verified.html
@@ -23,7 +23,7 @@
     {% endfor %}
   {% endif %}
     <div class="card">
-      <center><img src="{{site.logo}}" style="width: 100px; height: 100px;border-radius: 50%;" alt=""></center>
+      <center><img src="{{site.logo}}" style="width: 200px; height: 200px;border-radius: 50%; object-fit: contain;" alt=""></center>
 
       <h1>  Dear User </h1>
       <p>Your account has been verified successfully!</p>
