--- a/template/mail/activate.html
+++ b/template/mail/activate.html
@@ -53,7 +53,9 @@
       transition: background-color 0.3s;
     }
     .cta-button:hover {
-      background-color: #0056b3;
+      background-color: white;
+      color: red;
+      border: 1pc solid white;
     }
     .footer {
       padding: 10px 20px;
