--- a/template/mail/activate.html
+++ b/template/mail/activate.html
@@ -22,7 +22,8 @@
     }
     .header {
       background-color: rgba(100, 97, 97, 0.416);
-      color: #edc0c04a;
+      background-color: #f9f9f9;
+
       padding: 20px;
       text-align: center;
     }
