--- a/template/auth/register.html
+++ b/template/auth/register.html
@@ -60,6 +60,20 @@
                           {{ form.username }}
                         </div>
                       </div>
+                      <!-- Username -->
+                      <div>
+                        {{ form.firstname.label_tag }}
+                        <div class="hf">
+                          {{ form.firstname }}
+                        </div>
+                      </div>
+                      <!-- Username -->
+                      <div>
+                        {{ form.lastname.label_tag }}
+                        <div class="hf">
+                          {{ form.lastname }}
+                        </div>
+                      </div>
                       
                       <!-- Email -->
                       <div>
@@ -110,6 +124,12 @@
                       </div>
                     
                       <!-- Address -->
+                      <div>
+                        {{ form.Country.label_tag }}
+                        <div class="hf">
+                          {{ form.Country }}
+                        </div>
+                      </div>
                       <div>
                         {{ form.address.label_tag }}
                         <div class="hf">
