--- a/template/auth/register.html
+++ b/template/auth/register.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 {% load static %}
+{% load crispy_forms_tags %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <link
-      rel="stylesheet"
-      
-      href="https://tailwindui.com/plus/build/iframe-assets/compiled.css?hash=73be3ed2c08aa96cecdac9ca5dbecfe1"
-      />
+     
       <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
@@ -17,8 +14,8 @@
 
     <div id="app">
       <div class="la sk aas aoc">
-        <div class="la tg wr">
-          <div class="la wr aas abf aua auu cwm dqf dwd efe">
+        <div class="la tg wr flex *:w-fit items-center justify-center *:min-w-[70vw]">
+          <div class="la wr aas abf aua auu cwm dqf dwd efe bg-white p-6 shadow shadow-red-400/30 p-4 bg-white/40  rounded-lg">
             <div class="fy vo wj dpi">
               <center>
                 <img
@@ -26,10 +23,10 @@
                   src="{% static 'images/logo.png'%}"
                   class="w-[120px] h-fit cursor-pointer bg-red-500 p-3 " 
                 />
-                <h2 class="hm ayt azo azt baw">Sign Up to your account</h2>
+                <h2 class="hm ayt azo azt baw text-2xl text-white" style="color: white;">Sign Up to your account</h2>
                 <p class="hf aze bas">
                    a member?
-                  <a href="/login" class="text-red-300 text-xl">Sign In</a>
+                  <a href="/login" class="text-red-300 text-xl" style="color: white;"> >>> Sign In</a>
                 </p>
               </center>
               <div class="ho">
@@ -55,101 +52,91 @@
                       
                       <!-- Username -->
                       <div>
-                        {{ form.username.label_tag }}
                         <div class="hf">
-                          {{ form.username }}
+                          {{ form.username |as_crispy_field}}
                         </div>
                       </div>
                       <!-- Username -->
                       <div>
-                        {{ form.firstname.label_tag }}
                         <div class="hf">
-                          {{ form.firstname }}
+                          {{ form.firstname |as_crispy_field}}
                         </div>
                       </div>
                       <!-- Username -->
                       <div>
-                        {{ form.lastname.label_tag }}
                         <div class="hf">
-                          {{ form.lastname }}
+                          {{ form.lastname |as_crispy_field}}
                         </div>
                       </div>
                       
                       <!-- Email -->
                       <div>
-                        {{ form.email.label_tag }}
                         <div class="hf">
-                          {{ form.email }}
+                          {{ form.email |as_crispy_field}}
                         </div>
                       </div>
                     
                       <!-- Gender -->
                       <div>
-                        {{ form.gender.label_tag }}
                         <div class="hf">
-                          {{ form.gender }}
+                          {{ form.gender |as_crispy_field}}
                         </div>
                       </div>
                     
                       <!-- Mobile -->
                       <div>
-                        {{ form.mobile.label_tag }}
+                         
                         <div class="hf">
-                          {{ form.mobile }}
+                          {{ form.mobile |as_crispy_field}}
                         </div>
                       </div>
                     
                       <!-- Password -->
                       <div>
-                        {{ form.password.label_tag }}
+                        
                         <div class="hf">
-                          {{ form.password }}
+                          {{ form.password |as_crispy_field}}
                         </div>
                       </div>
                     
                       <!-- Confirm Password -->
                       <div>
-                        {{ form.confirm_password.label_tag }}
+                        
                         <div class="hf">
-                          {{ form.confirm_password }}
+                          {{ form.confirm_password |as_crispy_field}}
                         </div>
                       </div>
                     
                       <!-- Occupation -->
                       <div>
-                        {{ form.occupation.label_tag }}
                         <div class="hf">
-                          {{ form.occupation }}
+                          {{ form.occupation|as_crispy_field }}
                         </div>
                       </div>
                     
                       <!-- Address -->
                       <div>
-                        {{ form.Country.label_tag }}
                         <div class="hf">
-                          {{ form.Country }}
+                          {{ form.Country|as_crispy_field }}
                         </div>
                       </div>
                       <div>
-                        {{ form.address.label_tag }}
                         <div class="hf">
-                          {{ form.address }}
+                          {{ form.address|as_crispy_field }}
                         </div>
                       </div>
                     
                       <!-- Marital Status -->
                       <div>
-                        {{ form.marital_status.label_tag }}
                         <div class="hf">
-                          {{ form.marital_status }}
+                          {{ form.marital_status|as_crispy_field }}
                         </div>
                       </div>
                     
                       <!-- Type of Account -->
                       <div>
-                        {{ form.type_of_account.label_tag }}
                         <div class="hf">
-                          {{ form.type_of_account }}
+                          {{ form.type_of_account|as_crispy_field }}
                         </div>
                       </div>
                     
@@ -166,13 +153,15 @@
               </div>
             </div>
           </div>
-          <div class="l ld th wr dnd "  >
-            <img  style="position: sticky; top: 0; width: 100%; height: 100vh;"
-              alt=""
-              src="{% static 'main/mesafeni-koru-modal.png' %}"
-              class="j u pe asz"
-            />
-          </div>
+           
+          <style>
+            body{
+              background-image: url('{% static "main/western-union-desktop.jpg" %}')   ;
+              background-repeat: no-repeat;
+              background-size: cover;
+              
+            }
+          </style>
         </div>
       </div>
     </div>
