--- a/template/home/index.html
+++ b/template/home/index.html
@@ -40,6 +40,18 @@
       property="og:description"
       content="Turkish banking sector experiences the quality and trust with Ziraat, since 1863."
     />
+    <!-- Smartsupp Live Chat script -->
+<script type="text/javascript">
+  var _smartsupp = _smartsupp || {};
+  _smartsupp.key = '940148e39e2f8aed806290366d16a7ef536b34eb';
+  window.smartsupp||(function(d) {
+    var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+    s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+    c.type='text/javascript';c.charset='utf-8';c.async=true;
+    c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+  })(document);
+  </script>
+  <noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
     <link href="{% static 'images/favicon.ico'%}" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'css/magiclick.min.css'%}" type="text/css" />
     <script async="" src="https://www.ziraatbank.com.tr//zbmatomoapp.ziraatbank.com.tr/matomo.js'%}"></script>
