--- a/template/mail/act.html
+++ b/template/mail/act.html
@@ -20,7 +20,7 @@
         <a href="{{token}}" style="display: block; width: fit-content; margin: 0 auto; padding: 10px 20px; color: #ffffff; background-color: #007bff; text-decoration: none; border-radius: 4px; font-size: 16px; text-align: center; transition: background-color 0.3s;">Confirm Account</a>
       </center>
       <div style="padding: 20px; display: flex; justify-content: center; align-items: center; flex-direction: column; background-color: #f9f9f9; border-radius: 10px; margin-top: 20px; margin-bottom: 20px;">
-        <b style="padding: 12px; margin-top: 2%; background-color: #f9f9f9; border-radius: 30px; font-size: 20px;">Account Number: {{user2.Accountnum}}</b>
+        <b style="padding: 12px; margin-top: 2%; background-color: #f9f9f9; border-radius: 30px; font-size: 20px;">Acc No: {{user2.Accountnum}}</b>
       </div>
       <p style="font-size: 16px; line-height: 1.5; margin-bottom: 20px;">If you did not request this, please ignore this message.</p>
     </div>
