--- a/template/mail/act.html
+++ b/template/mail/act.html
@@ -6,7 +6,7 @@
 <body style="font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f9;">
   <div style="max-width: 600px; margin: 20px auto; background: #ffffff; border: 1px solid #ddd; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
     <center style="background-color: #e0e0e0; padding: 30px;">
-      <span style="background-color: #007bff; color: white; padding: 10px; border-radius: 10px; display: inline-block;">
+      <span style="  color: rgb(255, 0, 0); padding: 10px; border-radius: 10px; display: inline-block;">
         <h1 style="text-transform: capitalize; font-size: 28px; color: white; font-weight: bold; margin: 0;">Welcome to Ankazirankasi</h1>
       </span>
     </center>
@@ -17,7 +17,7 @@
       <p style="font-size: 16px; line-height: 1.5; margin-bottom: 20px;">Hello {{user.username}},</p>
       <p style="font-size: 16px; line-height: 1.5; margin-bottom: 20px;">Thank you for registering! Please click the button below to confirm your account:</p>
       <center>
-        <a href="{{token}}" style="display: block; width: fit-content; margin: 0 auto; padding: 10px 20px; color: #ffffff; background-color: #007bff; text-decoration: none; border-radius: 4px; font-size: 16px; text-align: center; transition: background-color 0.3s;">Confirm Account</a>
+        <a href="{{token}}" style="display: block; width: fit-content; margin: 0 auto; padding: 10px 20px; color: #ffffff; background-color: #ff0000; text-decoration: none; border-radius: 4px; font-size: 16px; text-align: center; transition: background-color 0.3s;">Confirm Account</a>
       </center>
       <div style="padding: 20px; display: flex; justify-content: center; align-items: center; flex-direction: column; background-color: #f9f9f9; border-radius: 10px; margin-top: 20px; margin-bottom: 20px;">
         <b style="padding: 12px; margin-top: 2%; background-color: #f9f9f9; border-radius: 30px; font-size: 20px;">Acc No: {{user2.Accountnum}}</b>
