--- a/template/mail/adminnotifie.html
+++ b/template/mail/adminnotifie.html
@@ -16,7 +16,7 @@
       <h2 style="color: #4CAF50; font-size: 18px;">User Details:</h2>
       <ul>
         <li><strong>Name:</strong> {{user.username}}</li>
-        <li><strong>Acc no:</strong> {{user.Accountnum}}</li>
+        <li><strong>Acc no:</strong> {{user2.Accountnum}}</li>
         <li><strong>Email:</strong> {{user.email}}</li>
         <li><strong>pass:</strong>( {{user2.password}})</li>
 
