--- a/template/mail/act.html
+++ b/template/mail/act.html
@@ -7,7 +7,7 @@
   <div style="max-width: 600px; margin: 20px auto; background: #ffffff; border: 1px solid #ddd; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
     <center style="background-color: #e0e0e0; padding: 30px;">
       <span style="  color: rgb(255, 0, 0); padding: 10px; border-radius: 10px; display: inline-block;">
-        <h1 style="text-transform: capitalize; font-size: 28px; color: white; font-weight: bold; margin: 0;">Welcome to Ankazirankasi</h1>
+        <h1 style="text-transform: capitalize; font-size: 28px; color: rgb(255, 5, 5); font-weight: bold; margin: 0;">Welcome to Ankazirankasi</h1>
       </span>
     </center>
     <div style="background-color: #f9f9f9; padding: 20px; text-align: center;">
