--- a/template/home/index.html
+++ b/template/home/index.html
@@ -363,13 +363,13 @@
                             href="/login"
                             target="_blank"
                             class="ignoreAlert individual-btn"
-                            >PERSONAL</a
+                            >Login</a
                           >
                           <a
                             href="/login"
                             target="_blank"
                             class="ignoreAlert corporate-btn"
-                            >CORPORATE</a
+                            >Register</a
                           >
                         </div>
                       </div>
@@ -448,20 +448,20 @@
                           <a href="javascript:;">Internet Banking</a>
                           <div class="ib-link">
                             <a
-                              href="/register"
-                              data-type="popup"
-                              data-width="979"
-                              data-height="720"
-                              class="individual-btn"
-                              >Personal</a
-                            >
-                            <a
                               href="/login"
                               data-type="popup"
                               data-width="979"
                               data-height="720"
+                              class="individual-btn"
+                              >Login</a
+                            >
+                            <a
+                              href="/register"
+                              data-type="popup"
+                              data-width="979"
+                              data-height="720"
                               class="corporate-btn"
-                              >Corporate</a
+                              >Register</a
                             >
                           </div>
                         </div>
