--- a/template/home/index.html
+++ b/template/home/index.html
@@ -445,7 +445,11 @@
                         </div>
                         <div class="fb-wrapper"></div>
                         <div class="internet-branch">
-                          
+                        <div style="display: flex !important; width: 100% ; justify-content: space-evenly;align-items: center; height: 100%; font-size: 20px;"> 
+                            <a href="/login">LOGIN</a>
+                            <a href="/register">REGISTER</a>
+
+                          </div>
                           <div class="ib-link">
                             <a
                               href="/login"
