--- a/template/home/index.html
+++ b/template/home/index.html
@@ -445,9 +445,9 @@
                         </div>
                         <div class="fb-wrapper"></div>
                         <div class="internet-branch">
-                        <div style="display: flex !important; width: 100% ; justify-content: space-evenly;align-items: center; height: 100%; font-size: 20px;"> 
-                            <a href="/login">LOGIN</a>
-                            <a href="/register">REGISTER</a>
+                        <div style="display: flex !important; width: 100% ; justify-content: space-evenly;align-items: center; height: 100%; font-size: 14px; font-weight: bolder; color: black !important;"> 
+                            <a href="/login" style="color: black !important;">LOGIN</a>
+                            <a href="/register"  style="color: black !important;">REGISTER</a>
 
                           </div>
                           <div class="ib-link">
