--- a/template/user/profile.html
+++ b/template/user/profile.html
@@ -1,11 +1,7 @@
 {% extends "./base.html" %}
 {% load static %}
 {% block content %}
-<link
-rel="stylesheet"
-
-href="https://tailwindui.com/plus/build/iframe-assets/compiled.css?hash=73be3ed2c08aa96cecdac9ca5dbecfe1"
-/> <!-- Mask -->
+ <!-- Mask -->
     <span class="mask bg-gradient-default opacity-1"></span>
     <!-- Header container -->
     <div class="container-fluid d-flex align-items-left">
