--- a/template/user/profile.html
+++ b/template/user/profile.html
@@ -30,11 +30,12 @@
       <div class="row">
           <div class="col-md-12">
           <div class="card" id="edit">
+            <cenrter>
               <div class="card-header header-elements-inline">
                  <h3 class="mb-0">
       Profile Overview<br>
       <small>Below is your Online Banking profile details</small></h3>
-              </div>
+              </div></cenrter>
               <div class="card-body">
                 
 {% if user.profile_picture %}
